# vtquiz

./: CMakeLists.txt  README.md
.cache/clangd/index/: AlternateSet.hh.972E63938C2C341D.idx  AlternateSubst.hh.FC25C7DD0C3A31ED.idx  AlternateSubstFormat1.hh.D69DF6F727C3D953.idx  Anchor.hh.06BF3B0F4385EE26.idx  AnchorFormat1.hh.9632616BAEA042A0.idx  AnchorFormat2.hh.B1762A43B1363516.idx  AnchorFormat3.hh.788756FF476106D6.idx  AnchorMatrix.hh.116822D4ABB98106.idx  CBDT.hh.EC65A5D5B07B1083.idx  COLR.hh.FCAD037872C0A225.idx  CPAL.hh.032207CA6EFE2AC4.idx  ChainContextPos.hh.2F6781AEECFECAB8.idx  ChainContextSubst.hh.0CFF1AF74A2D2CCB.idx  Common.hh.A6514F68C3DBF3D3.idx  Common.hh.B5A4D84A43748232.idx  CompositeGlyph.hh.1C27E608BD701B2C.idx  ContextPos.hh.820748C142653A50.idx  ContextSubst.hh.F0D65C85995DF54D.idx  Coverage.hh.26B7680747ED6CA7.idx  CoverageFormat1.hh.B487A8C0939FFAD6.idx  CoverageFormat2.hh.27D38F3A0370E65A.idx  CursivePos.hh.C333E930EB003756.idx  CursivePosFormat1.hh.00BE35025690983F.idx  ExtensionPos.hh.58A1B89C608D987E.idx  ExtensionSubst.hh.B61D7D575668CE7E.idx  GDEF.hh.D743B2008F7DAD92.idx  GPOS.hh.C585C7FD465F25CC.idx  GSUB.hh.8249FAF0C9FD8DB1.idx  Glyph.hh.68935E2B89436F76.idx  GlyphHeader.hh.0ED258B379375913.idx  IMG.c.F0CCD2BC87769AA8.idx  IMG_WIC.c.CE810ADFB82726EC.idx  IMG_avif.c.C7234F60AB9F8A61.idx  IMG_bmp.c.3A22BFACBA1E745D.idx  IMG_gif.c.7F256D7BF12422DF.idx  IMG_jpg.c.9C3F21042C6CDC33.idx  IMG_jxl.c.E779AFEEDC2B959F.idx  (+1367 more)
src/: CMakeLists.txt  gui.cpp  main.cpp  state.cpp  utils.cpp
src/include/: global.hpp  gui.hpp  state.hpp  utils.hpp
